--- a/client/pages/css/dashAdmin.module.css
+++ b/client/pages/css/dashAdmin.module.css
@@ -14,11 +14,17 @@
 .dashboard_admin{
     display: flex;
     flex-direction: row;
-    justify-content: start;
     align-items: center;
 
 }
 
+.content{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+
+}
 .saudacoes{
     font-family: 'Josefin Sans Medium';
     font-size: 150%;
@@ -36,11 +42,15 @@
 .content{
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-left: 5%;
+
 }
 
 .agenda{
-    margin-top: 10%;
-    width: 500px;
+    margin-top: 5%;
+    width: 700px;
     height: 300px;
     background-color: #fff;
     border-radius: 15px;
@@ -52,4 +62,25 @@
     display: flex;
     flex-direction: row;
     gap: 50%;
+}
+
+.imagem img{
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+
+
+/* No seu arquivo CSS */
+.content {
+    transition: margin-left 0.3s ease; /* Animação suave */
+}
+
+.content.closed {
+    margin-left: -10%; /* Se o menu estiver fechado */
+}
+
+.content.open {
+    margin-left: 2%; /* Ou a largura do seu menu */
 }
