--- a/client/ui/components/surfaces/css/menu.module.css
+++ b/client/ui/components/surfaces/css/menu.module.css
@@ -13,9 +13,29 @@
     src: url('../../../../src/josefin/JosefinSans-Medium.ttf') format('truetype');
 }
 
+/* menu.module.css */
+.menu {
+    width: 200px; /* Ajuste conforme a largura do seu menu */
+    transition: transform 0.3s ease; /* Para uma animação suave */
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1000; /* Certifique-se de que o menu está acima do conteúdo */
+}
+
+.menu.open {
+    transform: translateX(0); /* O menu está visível */
+}
+
+.menu.closed {
+    transform: translateX(-100%); /* O menu está escondido para a esquerda */
+}
+
+
 .menu {
     display: flex;
-    width: 20%;
+    width: 18vw;
     height: 90vh;
     background: #BA6DB5;
     color: white;
@@ -23,45 +43,24 @@
     margin: 2%;
     border-radius: 15px;
     position: relative;
-    overflow: hidden; /* Impede que qualquer conteúdo interno vaze para fora dos limites do .menu */
+    overflow: hidden;
     transition: width 0.3s ease;
     text-decoration: none;
-
-}
-
-/* Responsividade */
-@media (max-width: 768px) {
-    .menu {
-        width: 40%;
-    }
-}
-
-@media (max-width: 480px) {
-    .menu {
-        width: 60%;
-    }
-}
-
-@media (max-width: 320px) {
-    .menu {
-        width: 80%;
-    }
 }
 
 .menu .imagem {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%; /* Torna a imagem redonda */
+    width: 10vw;
+    height: 10vw;
+    border-radius: 50%;
     margin-top: 8%;
-    margin-left: 25%; /* Ajustado para centralizar a imagem */
-    margin-bottom: 2%;
-    background-color: #ffffff; /* Cor de fundo do container da imagem */
-    overflow: hidden; /* Garante que a imagem não ultrapasse os limites do container */
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #ffffff;
+    overflow: hidden;
     position: relative;
-    margin-bottom: 10%;
 }
 
 .menu .imageContainer {
@@ -84,50 +83,50 @@
 
 .menu .imagem .defaultIcon {
     font-size: 70%;
-    color: #cccccc; /* Cor do ícone de pessoa */
+    color: #cccccc;
 }
 
 .menu .editButton {
     position: absolute;
     left: 60%;
     top: 20%;
-    background-color: #ffffff; /* Cor do botão de edição */
+    background-color: #ffffff;
     color: #BA6DB5;
     border: none;
-    border-radius: 50%; /* Torna o botão redondo */
-    padding: 8px; /* Espaçamento interno do botão */
+    border-radius: 50%;
+    padding: 0.6vw;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Sombra suave */
-    z-index: 1; /* Garante que o botão esteja acima da imagem */
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    z-index: 1;
 }
 
 .menu .editButton:hover {
-    background-color: #f0f0f0; /* Cor de fundo do botão ao passar o mouse */
+    background-color: #f0f0f0;
 }
+
 .menu nav {
     display: flex;
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
     margin-top: 10%;
-    text-decoration: #ffffff;
     margin-left: 20px;
 }
 
 .menu .link {
     display: flex;
-    text-decoration: #ffffff;
+    text-decoration: none;
     color: white;
-    padding: 20px;
+    padding: 1.8vh 0.8vw;
     align-items: center;
     box-sizing: border-box;
     position: relative;
     overflow: hidden;
     font-family: 'Josefin Sans Medium';
-    font-size: 120%;
+    font-size: 1.6vh;
     transition: background-color 0.3s;
     width: 100%;
 }
@@ -138,32 +137,60 @@
     background-color: white;
     border-radius: 15px 0px 0px 15px;
     font-weight: bold;
-    text-decoration: #ffffff;
-
+    text-decoration: none;
 }
-
-
 
 .menu .link:hover {
     padding-right: calc(100vw - 20px);
-    text-decoration: #ffffff;
+    text-decoration: none;
+}
+
+
+
+.menuToggle {
+    color: #BA6DB5;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    position: absolute; /* Permite que o botão fique dentro do menu */
+    border-radius: 5px; /* Arredondar os cantos do botão */
+    padding: 10px; /* Espaçamento interno */
+    box-shadow: 0 2px 5px #BA6DB5; /* Sombra para destaque */
+    background-color: #ffffff ;
+    transition: background 0.3s;
+    bottom: 10%;
+    right: -5px;
 
 }
-/* Ajustes de fontes para responsividade */
-@media (max-width: 480px) {
-    .menu .link {
-        font-size: 110%;
-        padding: 15px;
-    }
 
-    .menu .editButton {
-        left: 55%;
-        top: 10%;
-        padding: 6px;
-    }
 
-    .menu .imagem {
-        width: 60%;
-        height: 20%;
+
+
+.nav {
+    display: flex;
+    flex-direction: column;
+}
+
+.menu {
+    transition: transform 0.3s ease; /* Animação para abrir/fechar */
+}
+
+.menu.open {
+    transform: translateX(0); /* Menu visível */
+}
+
+.menu.closed {
+    transform: translateX(-100%); /* Menu escondido */
+}
+
+@media (max-width: 1300px) {
+    .menu {
+        transform: translateX(-100%); /* Esconde o menu */
+    }
+    .menu.open {
+        transform: translateX(0); /* Exibe o menu quando aberto */
     }
 }
+
+
+
