--- a/client/ui/components/surfaces/css/modalG.module.css
+++ b/client/ui/components/surfaces/css/modalG.module.css
@@ -14,11 +14,12 @@
 }
 
 .modalBackdrop {
-    position: fixed;
+ 
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 200vh;
     background: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
@@ -26,6 +27,7 @@
   }
   
   .modalContent {
+   margin-top: -50%;
     background: white;
     padding: 20px;
     border-radius: 5px;
@@ -81,4 +83,9 @@
   .confirmButton:hover{
     background-color: #98e994;
 
+  }
+
+  .title{
+    color: #a75aa1;
+    font-family: 'josefin sans medium';
   }
