--- a/ui/components/css/formCadastroAdm.module.css
+++ b/ui/components/css/formCadastroAdm.module.css
@@ -1,5 +1,3 @@
-/* ../css/formLogin.module.css */
-
 @font-face {
     font-family: 'Josefin Sans Light';
     src: url('../../../src/josefin/JosefinSans-Light.ttf') format('truetype');
@@ -15,31 +13,44 @@
     src: url('../../../src/josefin/JosefinSans-Medium.ttf') format('truetype');
 }
 
+.form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10%;
+}
+
 .form form {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 90%;
     align-items: center;
-    flex-direction: column;
-    font-family: 'Josefin Sans Medium', sans-serif;
-    margin-top: -9%;
+    margin-top: -15%;
 }
 
-.formGroup {
+.formGroup, .label  {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     margin-top: 2%;
-    width: 100%;
+    width: 45%;
 }
 
-.formGroup input {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    margin-top: 2%;
-    width: 300px; /* Aumentando a largura dos inputs */
+.formGroup input,
+.formGroup .label input,
+.formGroup select,
+.formGroup textarea,
+.formCheck input,
+.passarea input, /* Incluí o campo de senha */
+.senhaRequisito,
+.label input,
+.btn {
+    width: 300px; /* Defina uma largura fixa para os inputs */
+    padding: 10px;
+    border-radius: 5px;
+    box-sizing: border-box; /* Inclui padding e border no cálculo da largura */
 }
 
 .formLabel {
@@ -53,10 +64,49 @@
 .usuario .dropdown {
     margin-top: 2%;
     width: 100%;
+    border: 1px solid white;
+    border-radius: 8px;
+    position: relative; /* Para posicionar o dropdown corretamente */
+    background-color: #252525; /* Fundo branco para o dropdown */
+}
+
+.dropdown_input {
+    display: flex;
+    justify-content: space-between; /* Espaço entre o texto e o ícone */
+    align-items: center; /* Centraliza verticalmente o texto e o ícone */
+    padding: 10px; /* Espaçamento interno para conforto */
+    cursor: pointer; /* Cursor de ponteiro ao passar o mouse */
+}
+
+.dropdown_menu {
+    position: absolute; /* Posiciona o menu dropdown relativo ao seu contêiner pai */
+    top: 100%; /* Coloca o menu logo abaixo do input */
+    left: 0;
+    width: 100%; /* Largura do menu igual à largura do input */
+    border-radius: 10px; /* Bordas arredondadas */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para o menu */
+    z-index: 1000; /* Garante que o menu fique acima de outros elementos */
+    background-color: #252525; /* Fundo do menu */
+    border: 1px solid white;
+}
+
+.dropdown_item {
+    padding: 10px; /* Espaçamento interno para os itens do dropdown */
+    cursor: pointer; /* Cursor de ponteiro ao passar o mouse */
+    border-bottom: 1px solid #eee; /* Divisória entre os itens */
+}
+
+.dropdown_item:hover {
+    background-color: #919191; /* Efeito de hover nos itens */
+    border-radius: 10px;
+}
+
+.dropdown_item:last-child {
+    border-bottom: none; /* Remove a divisória do último item */
 }
 
 .formLabel::placeholder {
-    color: #72406f;
+    color: #252525;
     text-align: left;
 }
 
@@ -65,71 +115,93 @@
     font-family: 'Josefin Sans Medium', sans-serif;
 }
 
-.formCheck {
-    margin-top: 5%;
-    width: 300px; /* Aumentando a largura da checkbox */
-}
 
 .formControl {
-    padding: 12px 20px;
     font-family: 'Josefin Sans Medium', sans-serif;
-    color: #72406f;
+    color: #252525;
     border-radius: 10px;
-    width: 300px; /* Aumentando a largura dos controles de formulário */
-}
-.formControl::placeholder {
-    color: #72406f;
+    padding: 10px;
+    width: 100%; /* Uniformiza a largura */
+    box-sizing: border-box; /* Inclui o padding no cálculo da largura */
 }
 
 .invalidPl::placeholder {
-    color: #ff0800;
+    color: #8e7f7e23;
 }
+
 
 .errorBox {
     margin-top: 5%;
     margin-bottom: 5%;
 }
+
 .formError {
-    padding: 10px 10px;
-    background-color: #ff0800;
+    font-family: 'Josefin Sans Medium', sans-serif;
+    padding: 10px;
+    background-color: #8e7f7eb1;
     border-radius: 10px;
     margin-top: 2%;
-    color: #ffff;
+    color: #fff;
     font-size: 70%;
+    text-transform: uppercase;
 }
 
 .senhaRequisito {
-    padding: 10px 10px;
     background-color: rgb(238, 238, 238);
     border-radius: 10px;
     margin-top: 2%;
-    color: #72406f;
+    color: #252525;
     font-size: 62%;
-    width: 300px; /* Aumentando a largura dos requisitos de senha */
 }
 
 .passarea {
-    position: relative;
-    width: 300px; /* Aumentando a largura da área de senha */
+    position: relative; /* Isso permite posicionar os ícones dentro da área de senha */
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
-.inputWithIcon {
-    padding-right: 10px; /* Espaço para o ícone */
-}
 
-.eyeButton {
+
+.eyeButton, .infoIcon {
     position: absolute;
-    right: 5%;
-    top: 55%;
-    transform: translateY(-50%);
+    right: 10px; /* Ajuste a distância dos ícones da borda direita */
     background: none;
     border: none;
     cursor: pointer;
-    padding: 0;
-    background-color: #fff;
-    border: none;
-    color: #72406f;
+    color: #252525;
 }
+
+.eyeButton {
+    right: 30px; /* Coloca o botão de olho um pouco à esquerda do infoIcon */
+}
+
+.infoIcon {
+    right: 10px; /* Mantém o ícone de informação mais à direita */
+}
+
+.infoIcon .tooltip {
+    visibility: hidden;
+    width: 200px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    padding: 3px;
+    border-radius: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%; /* Posiciona a tooltip acima do ícone */
+    left: 50%;
+    margin-left: -100px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.infoIcon:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+}
+
 
 .Formlabel {
     font-size: 120%;
@@ -138,140 +210,49 @@
 
 .remind a {
     text-decoration: none;
-    color: #72406f;
+    color: #252525;
     font-weight: bold;
 }
 
 .btn {
-    padding: 5% 10%;
+    padding: 3% 3%;
     background-color: white;
-    color: #BA6DB5;
+    color: #252525;
     border: none;
-    margin-top: 5%; /* Adicionando espaço entre .formCheck e .btn */
-    align-self: flex-end;
-    margin-right: -50%;
-    margin-bottom: 15%;
+    border-radius: 15px;
+    margin-top: 10%; /* Aumenta a margem superior */
+    width: 20%; /* Define a largura do botão */
+    font-family: 'Josefin Sans Medium', sans-serif;
+    display: flex; /* Garante que o botão seja tratado como um flex item */
+    justify-content: center; /* Centraliza o conteúdo do botão */
+    align-items: center; /* Centraliza verticalmente o conteúdo do botão */
+    margin-left:80%; /* Alinha o botão à direita se o contêiner for flexível */
 }
 
 .remind,
 .formCheck {
-    width: 100%; /* Ocupar toda a largura disponível */
-    margin-left: 0%; /* Removendo margem esquerda para ocupar toda a largura */
-    margin-top: 10px; /* Espaçamento entre cada elemento */
+    width: 100%;
+    margin-left: 0%;
+    margin-top: 10px;
 }
 
 .btn:hover {
-    background-color: #72406f;
+    background-color: #252525;
+    border-radius: 15px;
+    border: 1px solid white;
 }
 
-.dropdown {
-    position: relative;
-    font-family: Arial, sans-serif;
-    font-family: 'Josefin Sans Medium';
-    width: 300px; /* Aumentando a largura do dropdown */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.dropdown_input {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 10px;
-    cursor: pointer;
-    background-color: #fff;
-    color: #72406f;
-    padding: 12px 155px 12px 20px;
-}
-
-.dropdown_icon {
-    position: absolute;
-    right: 20px; /* Alinhar à direita do padding */
-}
-
-.dropdown_menu {
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-top: 5px;
-    width: 120%;
-    color: #72406f;
-}
-
-.dropdown_item {
-    padding: 10px;
-    cursor: pointer;
-}
-
-.dropdown_item:hover {
-    background-color: #f0f0f0;
-}
-
-.usuario .label {
-    margin-left: 0%;
-}
-.infoIcon {
-    position: absolute;
-    right: 40px; /* Ajuste para ficar ao lado do botão de olho */
-    top: 55%;
-    transform: translateY(-50%);
-    color: #72406f; /* Cor padrão roxa */
-    cursor: pointer;
-}
-
-.invalidInfoIcon {
-    color: #ff0800; /* Cor vermelha quando a senha é inválida */
-}
-
-.tooltip {
-    visibility: hidden;
-    width: 200px;
-    background-color: #ff0800;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px;
-    position: absolute;
-    z-index: 1;
-    bottom: 125%; /* Ajuste conforme necessário */
-    left: 50%;
-    margin-left: -100px; /* Metade da largura do tooltip */
-    opacity: 0;
-    transition: opacity 0.3s;
-}
-
-.tooltip::after {
-    content: "";
-    position: absolute;
-    top: 100%; /* At the bottom of the tooltip */
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #ff0800 transparent transparent transparent;
-}
-
-.infoIcon:hover .tooltip {
-    visibility: visible;
-    opacity: 1;
-}
-
-/* Estilos para o modal */
+/* Modal styles */
 .modal {
-    display: none; /* Inicialmente escondido */
-    position: fixed; 
-    z-index: 1; 
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto; 
-    background-color: rgba(0,0,0,0.4); 
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
     align-items: center;
     justify-content: center;
 }
@@ -304,24 +285,54 @@
 
 .modalText {
     font-family: 'Josefin Sans Medium', sans-serif;
-    color: #72406f;
+    color: #252525;
 }
 
-
-.logar{
+.logar {
     border-radius: 15px;
     padding: 2% 10%;
     text-decoration: none;
     color: #fff;
-    background-color: #BA6DB5;
+    background-color: #252525;
     border: none;
 }
 
-.logar a{
+.logar a {
     text-decoration: none;
     color: #fff;
 }
 
-.logar:hover{
-    background-color: #72406f;
+.logar:hover {
+    background-color: #474747;
+}
+
+/* Esconde o input real */
+.hiddenInput {
+    display: none;
+}
+
+/* Botão customizado para o input de arquivo */
+.customFileButton {
+    background-color: #252525;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 8px;
+    border: 1px solid white;
+    cursor: pointer;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+ 
+}
+
+/* Efeito de hover para o botão customizado */
+.customFileButton:hover {
+    background-color: #616161;
+}
+
+/* Estilo para o nome do arquivo selecionado */
+.fileName {
+    margin-left: 10px;
+    font-size: 14px;
+    color: #555;
 }
