--- a/pages/css/agenda.module.css
+++ b/pages/css/agenda.module.css
@@ -43,14 +43,14 @@
     height: 25%;
     background: #fff;
     border-radius: 15px;
-    box-shadow: 1px 1px 2px 1px rgba(179, 179, 179, 0.2);
+    border: 1px solid #252525;
     
 
 }
 
 .tags h2 {
     font-family: 'Josefin Sans Medium';
-    color: #ad60a6;
+    color: #252525;
     margin-left: 5%;
 }
 
