--- a/pages/css/dashAdmin.module.css
+++ b/pages/css/dashAdmin.module.css
@@ -29,7 +29,7 @@
 .saudacoes{
     font-family: 'Josefin Sans Medium';
     font-size: 150%;
-    color: #a75aa1;
+    color: #252525;
     
 }
 
@@ -37,7 +37,7 @@
     font-family: 'Josefin Sans Light';
     font-weight: 550;
     font-size: 70%;
-    color: #BA6DB5;
+    color: #252525;
 
 }
 
@@ -56,7 +56,7 @@
     width: 700px;
     background-color: #fff;
     border-radius: 15px;
-    box-shadow: 6px 6px 6px 6px rgb(242, 239, 240);
+    border: #252525 1px solid;
     margin-bottom: -12%;
 }
 
@@ -67,14 +67,44 @@
     gap: 50%;
 }
 
+
+.cub{
+    display: flex;
+    
+}
+
+
 .imagem img{
+    padding: 35px 45px;
+    border-radius: 0px 0px 10px 10px;
+    background-color: #252525;
     position: absolute;
-    right: 0;
+    right: 4%;
     top: 0;
+
 }
 
 
 
+.fullPage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Garante que o contêiner ocupe a altura total da janela */
+    width: 100vw; /* Garante que ocupe a largura total da janela */
+    position: fixed; /* Garante que o contêiner esteja fixado na tela */
+    top: 0;
+    left: 0;
+    background-color: #f5f5f5; /* Opcional: cor de fundo */
+    z-index: 9999; /* Certifique-se de que está acima de outros elementos */
+  }
+  
+  .ripple {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
 /* No seu arquivo CSS */
 .content {
     transition: margin-left 0.3s ease; /* Animação suave */
