--- a/ui/components/pub.module.css
+++ b/ui/components/pub.module.css
@@ -1,69 +1,67 @@
-@font-face {
-    font-family: 'Josefin Sans Light';
-    src: url('../../src/josefin/JosefinSans-Light.ttf') format('truetype');
-}
-@font-face {
-    font-family: 'Josefin Sans Bold';
-    src: url('../../src/josefin/JosefinSans-Bold.ttf') format('truetype');
-}
-@font-face {
-    font-family: 'Josefin Sans Medium';
-    src: url('../../src/josefin/JosefinSans-Medium.ttf') format('truetype');
-}
-
+/* Estilo principal */
 .proximaPublicacao {
-    padding: 5%;
-    border: 1px solid #eee;
-    box-shadow: 1px 1px 2px 2px #eee;
-    width: 300%;
+    width: 250%;
+    padding: 20px;
     border-radius: 15px;
     font-family: 'Josefin Sans Medium';
-    margin-bottom: 2%;
+    background-color: #ffffff;
 }
 
 .proximaPublicacao h2 {
+    font-size: 16px;
     color: #252525;
-}
-
-.publicacao {
-    display: flex;
-    flex-direction: row;
-    gap: 50%;
-}
-
-.titulo {
-    background-color: #252525;
-    color: #fff;
     text-align: center;
-    padding: 80%;
-    border-radius: 15px;
-    width: 150%;
-    font-size: 90%;
-    position: relative; /* Torna possível posicionar o .data */
+    margin-bottom: 15px;
+
+}
+
+/* Estilo do card */
+.card {
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+}
+
+/* Cabeçalho do card */
+.header {
+    background-color: #252525;
+    color: #ffffff;
+    padding: 15%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 14px;
+    border-radius: 15px 15px ;
 }
 
 .data {
-    position: absolute;
-    margin-left: 3%;
-    bottom: 2%;
-    background-color: #fff;
-    padding: 0.5% 1%;
+    background-color: #ffffff;
     color: #252525;
-    border-radius: 15px;
-    font-size: 80%;
+    padding: 5px 10px;
+    border-radius: 20px;
+    font-size: 12px;
 }
 
-.lateral {
-    color: #252525;
-    border-radius: 10px;
-    border: 1px solid #252525;
-    display: flex;
-    flex-direction: column;
-    padding: 3% 9%;
-    margin-top: -5%;
-    margin-left: -14%;
+.empresa {
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
 }
 
-.descricao, .empresa {
-    margin-left: -30%;
+/* Corpo do card */
+.body {
+    padding: 15px;
+    text-align: center;
+    font-size: 14px;
+    color: #252525;
+}
+
+.descricao {
+    margin: 0;
+    font-size: 14px;
+    padding: 30%;
+    font-weight: normal;
+    color: #252525;
 }
